[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.5.12",
    "matplotlib>=3.10.7",
    "mplfinance>=0.12.10b0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
]
